--- a/notebook/Training.ipynb
+++ b/notebook/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "master_path = '../CSV'\n",
     "categories = next(os.walk(master_path))[1]\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "Training using Logistic Regression...\n",
-      "Logistic Regression Accuracy: 76.581%\n",
+      "Logistic Regression Accuracy: 76.221%\n",
       "Training Complete\n"
      ]
     }
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "Training using KNeighbour Classifier...\n",
-      "KNN Accuracy: 87.329%\n",
+      "KNN Accuracy: 87.538%\n",
       "Training Complete\n"
      ]
     }
@@ -163,6 +164,35 @@
     "pickle.dump(knn, knnPickle)\n",
     "\n",
     "print(\"KNN Accuracy: %.3f%%\" % (metrics.accuracy_score(Y_test, y_pred) * 100))\n",
+    "print(\"Training Complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training using Random Forest Classifier...\n",
+      "Random Forest Accuracy: 96.519%\n",
+      "Training Complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training using Random Forest Classifier...\")\n",
+    "\n",
+    "knn = RandomForestClassifier(max_depth=10, random_state=0)\n",
+    "knn.fit(X_train, Y_train)\n",
+    "y_pred = knn.predict(X_test)\n",
+    "knnPickle = open('../models/knnpickle_file', 'wb')\n",
+    "# source, destination\n",
+    "pickle.dump(knn, knnPickle)\n",
+    "\n",
+    "print(\"Random Forest Accuracy: %.3f%%\" % (metrics.accuracy_score(Y_test, y_pred) * 100))\n",
     "print(\"Training Complete\")"
    ]
   },
