Added Random Forest

--- a/notebook/Training.ipynb
+++ b/notebook/Training.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -185,12 +185,12 @@
    "source": [
     "print(\"Training using Random Forest Classifier...\")\n",
     "\n",
-    "knn = RandomForestClassifier(max_depth=10, random_state=0)\n",
-    "knn.fit(X_train, Y_train)\n",
-    "y_pred = knn.predict(X_test)\n",
-    "knnPickle = open('../models/knnpickle_file', 'wb')\n",
+    "rf = RandomForestClassifier(max_depth=10, random_state=0)\n",
+    "rf.fit(X_train, Y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "rfPickle = open('../models/rfpickle_file', 'wb')\n",
     "# source, destination\n",
-    "pickle.dump(knn, knnPickle)\n",
+    "pickle.dump(rf, rfPickle)\n",
     "\n",
     "print(\"Random Forest Accuracy: %.3f%%\" % (metrics.accuracy_score(Y_test, y_pred) * 100))\n",
     "print(\"Training Complete\")"
